--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -29,13 +29,13 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/docker-new-project-codeigniter:${{ github.sha }}
-            ${{ secrets.DOCKERHUB_USERNAME }}/docker-new-project-codeigniter:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/docker-new-project:${{ github.sha }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/docker-new-project:latest
 
       - name: Update Docker Hub description
         uses: peter-evans/dockerhub-description@v5.0.0
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-          repository: ${{ secrets.DOCKERHUB_USERNAME }}/docker-new-project-codeigniter
+          repository: ${{ secrets.DOCKERHUB_USERNAME }}/docker-new-project
           readme-filepath: README.md
